<resources>
    <string name="app_name">NYTMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publication_date">publication date</string>
    <string name="date_published">Date Published:</string>
    <string name="movie_rating">Movie Rating:</string>
    <string name="mpaa_rating">mpaa rating</string>
    <string name="for_more_details_about_this_movie_please_visit">For more details about this movie, Please visit:</string>
    <string name="save_the_movie">Save the Movie</string>
    <string name="movie_den">Movie Den</string>
    <string name="click_here">Click here</string>
    <string name="the_movie_den">The Movie Den</string>
    <string name="welcome_to">Welcome To:</string>
</resources>